# starlette-web

./: .env.template  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  asgi.py  command.py  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
docs/: README.md  borrowing.md
docs/common/: authorization_permissions.md  caching.md  channels.md  email.md  file_storages.md  http.md  management_commands.md  model_mixin.md  utils.md  websockets.md
docs/contrib/: apispec.md  constance.md  scheduler.md
docs/howto/: README.md
docs/howto/deploy/: README.md  gunicorn.service  nginx.conf
docs/howto/setup/: README.md
docs/howto/startup/: nginx.conf
docs/notes/: anyio_structured_concurrency.md  database_session_scopes.md  orm_filefield_challenges.md  scheduling_tasks.md
starlette_web/common/: app.py
starlette_web/common/authorization/: __init__.py  backends.py  base_user.py  jwt_backend.py  jwt_utils.py  permissions.py
starlette_web/common/caches/: base_lock.py  cache_handler.py  local_memory.py
starlette_web/common/channels/: base.py
starlette_web/common/channels/layers/: base.py  local_memory.py
starlette_web/common/conf/: __init__.py  app_manager.py  global_settings.py  utils.py
starlette_web/common/conf/files_templates/: alembic_env_template.py-tpl  env_template.py-tpl
starlette_web/common/database/: __init__.py  columns.py  model_mixin.py  session_maker.py  types.py
starlette_web/common/email/: base_sender.py  email_manager.py  smtp.py
starlette_web/common/files/: cache.py  filelock.py
starlette_web/common/files/storages/: __init__.py  base.py  filesystem.py  storage_manager.py
starlette_web/common/http/: base_endpoint.py  exception_handlers.py  exceptions.py  schemas.py
starlette_web/common/management/: admin_util.py  base.py  utils.py
starlette_web/common/management/commands/: makemigrations.py  startapp.py  startproject.py
starlette_web/common/utils/: __init__.py  choices.py  encoding.py  inspect.py  regex.py
starlette_web/common/ws/: base_endpoint.py
starlette_web/contrib/admin/: admin.py  auth_provider.py  middleware.py
starlette_web/contrib/apispec/: apps.py  utils.py  views.py
starlette_web/contrib/apispec/marshmallow/: __init__.py  converters.py
starlette_web/contrib/auth/: backend.py  hashers.py  jwt_utils.py  models.py  password_validation.py  utils.py  views.py
starlette_web/contrib/camel_case/: parser.py
starlette_web/contrib/constance/: __init__.py  apps.py
starlette_web/contrib/constance/backends/: base.py  caching_mixin.py
starlette_web/contrib/mqtt/: channel_layers.py  serializers.py
starlette_web/contrib/postgres/: channel_layers.py
starlette_web/contrib/redis/: cache.py  channel_layers.py  redislock.py
starlette_web/contrib/scheduler/: apps.py
starlette_web/contrib/scheduler/backends/: __init__.py  (+3 more)
starlette_web/core/: routes.py  settings.py
starlette_web/tests/: conftest.py  helpers.py  routes.py  settings.py
starlette_web/tests/api/: test_auth.py  test_service.py
starlette_web/tests/contrib/: test_apispec.py  test_auth.py  test_channels.py  test_constance.py  test_jwt_utils.py  test_redis_cache.py
starlette_web/tests/core/: test_auth_backends.py  test_base.py  test_base_caches.py  test_choices.py  test_responses.py  test_service.py  test_settings.py
starlette_web/tests/database/: test_nested_transaction.py
starlette_web/tests/files/: test_filesystem_storage.py  test_media_storage.py  test_storage_manager.py
starlette_web/tests/utils/: test_per_route_middleware.py  test_serializers.py
starlette_web/tests/views/: __init__.py  http.py  middlewares.py  schemas.py  websocket.py
starlette_web/tests/websockets/: test_websocket_endpoint.py
(+20 files in other folders)
