[metadata]
name = starlette_web
version = 0.0.2
description = Asynchronous web framework, based on Starlette and inspired by Django
long_description = file: README.md
url = https://github.com/dolamroth/starlette-web
license = MIT License
classifiers =
    Framework :: Starlette
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

install_requires =
    anyio>=3.6.2,<3.7
    starlette>=0.25,<0.26
    webargs-starlette>=2.1,<2.2
    python-multipart==0.0.6 # required by starlette dependencies
    websockets>=10.4,<10.5

    sqlalchemy>=2.0.2,<2.1
    alembic>=1.9.4,<1.10

    Jinja2>=3.1,<3.2
    httpx>=0.23,<0.24
    redis>=4.3,<4.4
    python-dotenv>=0.21,<0.22
    traceback-with-variables>=2.0.4,<2.1

dependency_links =
    https://github.com/dolamroth/py_win_task_scheduler/archive/refs/heads/main.zip#egg=py_win_task_scheduler

[options.packages.find]
exclude =
    tests

[options.extras_require]

apispec =
    apispec>=6.0,<6.1
    pyyaml>=6.0,<6.1
    openapi-spec-validator>=0.5.5,<0.6

admin =
    starlette-admin>=0.5.3,<0.6

auth =
    PyJWT>=2.6,<2.7

postgres =
    asyncpg>=0.27,<0.28

scheduler =
    filelock>=3.9.0,<3.10 # TODO: move to general requirements
    croniter>=1.3.8,<1.4
    py_win_task_scheduler; sys_platform == 'win32'

develop =
    black~=22.10.0

testing =
    pytest>=6.2,<6.3
    coverage>=6.2,<6.3
    psycopg2-binary>=2.9,<2.10
    requests>=2.28,<2.29
    flake8>=4.0,<4.1
